# node-usb-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  header.d.ts  hierarchy.html  index.d.ts  index.html  index.js  modules.html  package-lock.json  package.json  test.js  test.mjs  worker.js
.github/: dependabot.yml
.github/workflows/: CI.yml  ci.yml  docs.yml
__test__/: index.spec.ts
assets/: navigation.js  search.js
classes/: WebUSB.html
functions/: findByIds.html  findBySerialNumber.html  getDeviceList.html
interfaces/: USBOptions.html
scripts/: version.mjs
src/: lib.rs  webusb_device.rs
test/: webusb.coffee
tsc/: index.ts
variables/: usb.html  webusb.html
