
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "usb"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["tokio_rt"] }
napi-derive = "3.0.0"
nusb = "=0.2.1"
tokio = { version = "1", features = ["rt", "time", "fs"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
